// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Ui/TableAuto Simple 1`] = `
<div>
  <div
    class="overflow-scroll-x mb"
  >
    <div
      class="table"
    >
      <div
        class="tr"
      >
        
        <div
          class="th nowrap min-width-8"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Nom 
            <svg
              aria-labelledby="chevron-bas"
              class="right"
              fill="#666"
              height="24px"
              role="application"
              style="display: block;"
              tabindex="-1"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                aria-hidden="true"
                style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <symbol
                  id="icon-chevron-bas"
                  viewBox="0 0 24 24"
                >
                  <title>
                    chevron-bas
                  </title>
                  <path
                    d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                  />
                </symbol>
                <symbol
                  id="icon-chevron-haut"
                  viewBox="0 0 24 24"
                >
                  <title>
                    chevron-haut
                  </title>
                  <path
                    d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                  />
                </symbol>
                <symbol
                  id="icon-close"
                  viewBox="0 0 24 24"
                >
                  <title>
                    close
                  </title>
                  <path
                    d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
                  />
                </symbol>
                <symbol
                  id="icon-download"
                  viewBox="0 0 24 24"
                >
                  <title>
                    download
                  </title>
                  <path
                    d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                  />
                </symbol>
              </svg>
              <use
                href="#icon-chevron-bas"
              />
            </svg>
          </button>
        </div>
        <div
          class="th nowrap"
        >
          <button
            class="btn-menu full-x p-0"
          >
            – 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap min-width-8"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Type 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap nowrap min-width-5"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Statut 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Test 
            <!--v-if-->
          </button>
        </div>
        
      </div>
      
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_0
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 0
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 0
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_1
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 1
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 1
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_2
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 2
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 2
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_3
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 3
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 3
          </span>
        </div>
        
      </router-link>
      
    </div>
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Ui/TableAuto Sorted By Status Asc 1`] = `
<div>
  <div
    class="overflow-scroll-x mb"
  >
    <div
      class="table"
    >
      <div
        class="tr"
      >
        
        <div
          class="th nowrap min-width-8"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Nom 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap"
        >
          <button
            class="btn-menu full-x p-0"
          >
            – 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap min-width-8"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Type 
            <!--v-if-->
          </button>
        </div>
        <div
          class="th nowrap nowrap min-width-5"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Statut 
            <svg
              aria-labelledby="chevron-haut"
              class="right"
              fill="#666"
              height="24px"
              role="application"
              style="display: block;"
              tabindex="-1"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                aria-hidden="true"
                style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <symbol
                  id="icon-chevron-bas"
                  viewBox="0 0 24 24"
                >
                  <title>
                    chevron-bas
                  </title>
                  <path
                    d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                  />
                </symbol>
                <symbol
                  id="icon-chevron-haut"
                  viewBox="0 0 24 24"
                >
                  <title>
                    chevron-haut
                  </title>
                  <path
                    d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                  />
                </symbol>
                <symbol
                  id="icon-close"
                  viewBox="0 0 24 24"
                >
                  <title>
                    close
                  </title>
                  <path
                    d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
                  />
                </symbol>
                <symbol
                  id="icon-download"
                  viewBox="0 0 24 24"
                >
                  <title>
                    download
                  </title>
                  <path
                    d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                  />
                </symbol>
              </svg>
              <use
                href="#icon-chevron-haut"
              />
            </svg>
          </button>
        </div>
        <div
          class="th nowrap"
        >
          <button
            class="btn-menu full-x p-0"
          >
            Test 
            <!--v-if-->
          </button>
        </div>
        
      </div>
      
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_3
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 3
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 3
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_2
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 2
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 2
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_1
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 1
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 1
          </span>
        </div>
        
      </router-link>
      <router-link
        class="tr tr-link text-decoration-none"
        to="[object Object]"
      >
        
        <div
          class="td min-width-8"
        >
          <span
            class="bold"
          >
            220222_0
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class="cap-first small bold mono"
          >
            <span
              class="bg-domaine-m color-bg pill py-xs px-s"
            >
              
              m
              
            </span>
          </span>
        </div>
        <div
          class="td min-width-8"
        >
          <span
            class="small bold cap-first"
          >
            Autorisation de recherches
          </span>
        </div>
        <div
          class="td nowrap min-width-5"
        >
          <span
            class="cap-first small bold"
          >
            <span
              class="bg-warning color-bg pill py-xs px-s"
            >
              
              Demande initiale 0
              
            </span>
          </span>
        </div>
        <div
          class="td"
        >
          <span
            class=""
          >
            Test value 0
          </span>
        </div>
        
      </router-link>
      
    </div>
  </div>
</div>
`;
